--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,21 +2,29 @@ name: Test CI
 
 on:
     push:
-        branches: [main]
-    pull_request:
-        branches: [main]
+          branches:
+                  - main
+                      pull_request:
+                            branches:
+                                    - main
 
-jobs:
-    build:
-        runs_on: ubuntu-latest
+                            jobs:
+                                build:
+                                      runs_on: ubuntu-latest
 
-        strategy:
-            matrix:
-            node-version: [14, 16, 18]
-        steps:
-            - uses: actions/checkout@v3
-            - name: Use Node.js ${{ matrix.node }}
-              uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node }}
-            - run: npm ci
+                                            strategy:
+                                                    matrix:
+                                                              node-version: [14, 16, 18]
+
+                                                                    steps:
+                                                                            - name: Checkout code
+                                                                                      uses: actions/checkout@v3
+
+                                                                                              - name: Setup Node.js
+                                                                                                        uses: actions/setup-node@v3
+                                                                                                                  with:
+                                                                                                                              node-version: ${{ matrix.node-version }}
+
+                                                                                                                                      - name: Install dependencies
+                                                                                                                                                run: npm ci
+                                                                                                                                                  
