--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,7 @@ on:
             strategy:
                 matrix:
                     node-version: [14, 16, 18]
+            name: Node ${{ matrix.node }} sample
             steps:
                 - name: Checkout code
                   uses: actions/checkout@v3
