--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
     build:
-        runs_on: ubuntu-latest
+        runs-on: ubuntu-latest
         strategy:
             matrix:
                 node-version: [14, 16, 18]
