--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [14, 16, 18]
-        name: Node ${{ matrix.node }} m
+        name: Node ${{ matrix.node-version }} m
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
